--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+echo "# pikachu" >> README.md
+git init
+git add README.md
+git commit -m "first commit"
+git remote add origin https://github.com/Pikachu-cn/pikachu.git
+git push -u origin master
 这是一个软件库
 
 所有软件都是破解版的，我不是不支持正版，而是放在这以便急时没有足够的钱财去购买正版软件
